# fastapi-tutorial

./: main.py  pyproject.toml
src/: __init__.py  auth.py  models.py  router.py
tests/: test_auth.py  test_models.py  test_router.py
